--- a/lfia/lab3/lab3.tex
+++ b/lfia/lab3/lab3.tex
@@ -7,6 +7,7 @@
 \usepackage[fleqn]{amsmath}
 \usepackage{tgtermes}
 \usepackage[final]{pdfpages}
+\usepackage{wrapfig}
 
 \usepackage[normalem]{ulem}
 \useunder{\uline}{\ul}{}
@@ -101,8 +102,12 @@ bookmarksopenlevel=2]{hyperref}
 	\vspace{1cm}
 
 	Czyli ostatecznie \\
-	\begin{tabular}{|c|c|c|}
+	\begin{tabular}{cc}
 		\hline
+		\raisebox{-\totalheight}{\includegraphics[scale=0.5]{das1}}
+		&
+		\raisebox{-\totalheight +1.5cm}{
+		\begin{tabular}{|c|c|c|}
 		   & 0 & 1 \\ \hline
 		>A & A & B \\ \hline
 		B  & C & D \\ \hline
@@ -112,6 +117,8 @@ bookmarksopenlevel=2]{hyperref}
 		*F & C & D \\ \hline
 		*G & E & F \\ \hline
 		*H & G & H \\ \hline
+	\end{tabular}
+	}
 	\end{tabular}
 \end{center}
 
@@ -154,14 +161,20 @@ bookmarksopenlevel=2]{hyperref}
 	\vspace{1cm}
 
 	Czyli ostatecznie \\
-	\begin{tabular}{|c|c|c|}
+	\begin{tabular}{cc}
+		\hline
+		\raisebox{-\totalheight}{\includegraphics[scale=0.7]{das2}}
+		&
+		\raisebox{-\totalheight}{
+		\begin{tabular}{|c|c|c|}
 		\hline
 		   & 0 & 1 \\ \hline
 		>A & A & B \\ \hline
 		B  & C & B \\ \hline
 		*C & A & B \\ \hline
 	\end{tabular}
-
+	}
+	\end{tabular}
 \end{center}
 
 \newpage
@@ -207,8 +220,13 @@ bookmarksopenlevel=2]{hyperref}
 	\\
 	\vspace{1cm}
 	Czyli ostatecznie
-
-	\begin{tabular}{|c|c|c|}
+	\\
+	\begin{tabular}{cc}
+    	\hline
+		\raisebox{-\totalheight}{\includegraphics[scale=0.8]{das3}}
+		&
+		\raisebox{-\totalheight}{
+		\begin{tabular}{|c|c|c|}
 		\hline
 		   & 0 & 1 \\ \hline
 		>A & A & B \\ \hline
@@ -217,6 +235,8 @@ bookmarksopenlevel=2]{hyperref}
 		D  & C & F \\ \hline
 		*E & C & D \\ \hline
 		*F & C & F \\ \hline
+	\end{tabular}
+	}
 	\end{tabular}
 \end{center}
 \end{document}
