list of incentives + text formatting

--- a/projekty/IO/main.tex
+++ b/projekty/IO/main.tex
@@ -28,7 +28,24 @@
 \stronatytulowa{}
 
 \section{Krótki opis systemu}
-\large
-Nasz projekt zakłada zamodelowanie działania kompleksu narciarskiego. Nasza stacja narciarska będzie oferować możliwość zakupu karnetów w kasie badź online. Klient będzie miał możliwość dokonania płatności gotówką, kartą lub przelewem. Do wyboru będzie miał różne metody potwierdzenia płatności, faktura, paragon. W naszej ofercie znajdą się karnety czasowe oraz "na punkty". Dla młodych narciarzy oraz grup zorganizowanych przygotowaliśmy specjalną ofertę zniżkową. Karnet czasowy umożliwia korzystanie ze wszystkich wyciągów w obrębie naszego kompleku w danym okresie, karnet punktowy pozwala na korzystanie z wyciągów do wyczerpania posiadanej ilości punktów na karnecie, przy czym, skorzystanie z określonego wyciągu redukuje ilość punktów na karcie o daną ilość, dla każdego wyciągu zdefiniowaną indywidualnie. Klient będzie musiał wypożyczyć kaucjonowaną kartę magnetyczną lub przypisać karnet do legitymacji z chipem. W ramach funkcjonowania całego kompleksu narciarskiego, klient będzie miał możliwość wynajęcia instruktora, oraz całego potrzebnego sprzętu w lokalnej wypożyczalni. W obrębie wypożyczalni będzie działać rówież serwis, gdzie klient będzie mógł zlecić renowację własnego sprzętu.
+    \large
+    Nasz projekt zakłada zamodelowanie działania kompleksu narciarskiego. Nasza stacja narciarska będzie oferować możliwość zakupu karnetów w kasie badź online. Klient będzie miał możliwość dokonania płatności gotówką, kartą lub przelewem. Do wyboru będzie miał różne metody potwierdzenia płatności, faktura, paragon. W naszej ofercie znajdą się karnety czasowe oraz "na punkty". Dla młodych narciarzy oraz grup zorganizowanych przygotowaliśmy specjalną ofertę zniżkową. Karnet czasowy umożliwia korzystanie ze wszystkich wyciągów w obrębie naszego kompleku w danym okresie, karnet punktowy pozwala na korzystanie z wyciągów do wyczerpania posiadanej ilości punktów na karnecie, przy czym, skorzystanie z określonego wyciągu redukuje ilość punktów na karcie o daną ilość, dla każdego wyciągu zdefiniowaną indywidualnie. Klient będzie musiał wypożyczyć kaucjonowaną kartę magnetyczną lub przypisać karnet do legitymacji z chipem. W ramach funkcjonowania całego kompleksu narciarskiego, klient będzie miał możliwość wynajęcia instruktora, oraz całego potrzebnego sprzętu w lokalnej wypożyczalni. W obrębie wypożyczalni będzie działać rówież serwis, gdzie klient będzie mógł zlecić renowację własnego sprzętu.
+
+\section{Lista bodźców zewnętrznych}
+    \begin{enumerate}
+	\item żądanie kupna karnetu
+        \item żądanie zwrotu nie używanego karnetu
+        \item żądanie sprawdzenia stanu punktowego karnetu
+        \item żądanie realizacji płatnośći
+	\item żądanie wyboru metody potwierdzenia zakupu
+	\item żądanie przypisania karnetu do karty (kaucjonowana lub legitymacja)
+	\item żądanie zwrotu karty kaucjonowanej
+	\item żądanie przeniesienia nieużytego karnetu na inny dzień
+	\item żądanie rezerwacji instruktora
+        \item żądanie wypożyczenia sprzetu
+	\item żądanie oddania wypożyczonego sprzętu
+	\item żądanie zlecenia serwis sprzętu
+	\item żądanie zwrotu serwisowanego sprzętu
+    \end{enumerate}
 
 \end{document}
