--- a/projekty/IO/main.tex
+++ b/projekty/IO/main.tex
@@ -48,4 +48,10 @@
 	\item żądanie zwrotu serwisowanego sprzętu
     \end{enumerate}
 
+\newpage
+\section{Diagram przepływu danych}
+\begin{center}
+    \includegraphics[scale=0.25]{diagram_kontekstowy}
+\end{center}
+
 \end{document}
