--- a/projekty/IO/main.tex
+++ b/projekty/IO/main.tex
@@ -54,4 +54,12 @@
     \includegraphics[scale=0.25]{diagram_kontekstowy}
 \end{center}
 
+\begin{landscape}
+    \newpage
+    \section{Diagram przepływu danych - poziom 0}
+    \begin{figure}
+        \includepdf[trim=-3cm 0 0 0]{dfd/p0/p0-all-rotated-2}
+    \end{figure}
+\end{landscape}
+
 \end{document}
