--- a/projekty/IO/main.tex
+++ b/projekty/IO/main.tex
@@ -60,6 +60,43 @@
     \begin{figure}
         \includepdf[trim=-3cm 0 0 0]{dfd/p0/p0-all-rotated-2}
     \end{figure}
+
+\newpage
+\section{Diagram przepływu danych - poziom 1}
+\subsection{Kasa biletowa}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p1/p1-kasabiletowa-rotated}
+\end{figure}
+
+\newpage
+\subsection{Obsługa klienta}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p1/p1-dzialobslugi-rotated}
+\end{figure}
+
+\newpage
+\subsection{Szkółka narciarska}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p1/p1-szkola-rotated}
+\end{figure}
+
+\newpage
+\subsection{Wypożyczalnia sprzętu}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p1/p1-wypozyczalnia-rotated}
+\end{figure}
+
+\newpage
+\subsection{Serwis sprzętu}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p1/p1-serwis-rotated}
+\end{figure}
+
+\newpage
+\subsection{Bramki}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p1/p1-bramki-rotated}
+\end{figure}
 \end{landscape}
 
 \end{document}
