--- a/projekty/IO/main.tex
+++ b/projekty/IO/main.tex
@@ -97,6 +97,49 @@
 \begin{figure}
     \includepdf[trim=-3cm 0 0 0]{dfd/p1/p1-bramki-rotated}
 \end{figure}
+
+\newpage
+\section{Diagram przepływu danych - poziom 2}
+\subsection{Kasa biletowa - kupno karnetu}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p2/p2-kupnokarnetu-rotated}
+\end{figure}
+
+\newpage
+\subsection{Obsługa klienta - zwroty}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p2/p2-zwroty-rotated}
+\end{figure}
+
+\newpage
+\subsection{Wypożyczalnia sprzętu - wypożyczenie}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p2/p2-wypozyczenie-rotated}
+\end{figure}
+
+\newpage
+\subsection{Serwis sprzętu - serwisowanie}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p2/p2-serwisowanie-rotated}
+\end{figure}
+
+\newpage
+\subsection{Płatność - gotówką}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p2/p2-cash-rotated}
+\end{figure}
+
+\newpage
+\subsection{Płatność - kartą płatniczą}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p2/p2-debit-rotated}
+\end{figure}
+
+\newpage
+\subsection{Płatność - online}
+\begin{figure}
+    \includepdf[trim=-3cm 0 0 0]{dfd/p2/p2-online-rotated}
+\end{figure}
 \end{landscape}
 
 \end{document}
