--- a/projekty/aimo/uzycia/uzycia.tex
+++ b/projekty/aimo/uzycia/uzycia.tex
@@ -1,86 +1,11 @@
-ss{sprawozdanie-agh}
-\title{AiMO - strefa płatnego parkowania}
-\usepackage{lscape}
-\usepackage[final]{pdfpages}
-\usepackage[utf8]{inputenc}
-\usepackage{listings}
-\usepackage{indentfirst}
-\usepackage{geometry}
-\usepackage{sectsty}
-\sectionfont{\fontsize{18}{22}\selectfont}
-\usepackage{array}
-\usepackage{lscape}
-\usepackage[final]{pdfpages}
-\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-\geometry{
- a4paper,
- total={170mm,257mm},
- left=20mm,
- right=20mm,
- top=35mm,
-}
 
-\makeatletter
 
-\begin{document}
-
-\przedmiot{Analiza i Modelowanie Oprogramowania}
-\tytul{Projekt aplikacji do zarządzania parkingiem}
-\podtytul{...}
-\kierunek{Informatyka}
-\autor{Patryk Gałczyński}
-\data{Kraków, 11 grudnia 2016}
-
-\stronatytulowa{}
-
-\newpage
-\section{Analiza wymagań systemu:}
-\Large
-Projekt zakłada modelowanie systemu zarządzania parkingiem. \\
-
-Parking obsługuje klientów indywidualnych oraz firmy. Rezerwacji miejsca będzie można dokonywać telefonicznie, przez stronę WWW oraz na miejscu w automatycznej kasie. Klienci będą mieli możliwość płatności gotówką, kartą (tylko na~miejscu) lub online za pomocą systemu płatności elektronicznej (przelew). \\
-
-Klienci indywidualni płacą za miejsce z góry za określony czas. Klientom biznesowym cyklicznie wystawiana jest zbiorcza faktura za wszystkie rezerwacje z~danego miesiąca. \\
-
-Automatyczna kasa sprzedaje rezerwację na miejscu, udziela informacji o~ilości dostępnych miejsc, umożliwia odebranie rezerwacji złożonej online, przydziela konkretne miejsce. \\
-
-Parkingowy okresowo sprawdza ważność rezerwacji miejsca danego pojazdu. W~przypadku przekroczenia czasu dostępnego na bilecie informuje klienta o zaistniałej sytuacji (telefon/email). W~przypadku braku wyjaśnienia ze strony klienta, parkingowy zamawia pomoc drogową do odholowania pojazdu. \\
-
-Pomoc drogowa eksmituje pojazdy wskazane przez parkingowego jako nie opłacone.
-
-System przechowywania danych pozwala na zapis oraz odczyt danych systemu.
-
-\newpage
-\section{Aktorzy}
-\subsection{Klient}
-
-Podmiot zewnętrzny (osoba lub przedsiębiorstwo), rezerwuje miejsce osobiście lub przez telefon/online, może płacić gotówką, kartą (na miejscu) lub online (karta, sms, przelew), żąda dowodu zakupu (paragon/faktura), składa reklamacje,  opłaca ewentualne kary.
-
-\subsection{Kasa automatyczna}
-
-Element systemu sprzedający rezerwacje na miejsce, udziela informacji o miejscach, przydziela miejsce parkingowe, przyjmuje płatności, wystawia dowód zakupu (paragon).
-
-\subsection{Dział obsługi klienta}
-
-Użytkownik systemu przyjmujący reklamacje, wystawiający faktury dla klientów biznesownych,  przyjmujący opłaty karne (mandaty), generujący raport za~cały miesiąc dla biznesu.
-
-\subsection{Parkingowy}
-
-Użytkownik systemu, sprawdza ważność rezerwacji miejsca, informuje klienta o stanie rezerwacji, zamawia pomoc drogową, generuje raporty podsumowujące dany miesiąc (ilość mandatów, ilość eksmisji), wystawia mandaty za przekroczenie czasu.
-
-\subsection{System przechowywania danych}
-
-Element systemu odpowiadający za zapis oraz odczyt danych o wolnych/zajętych miejscach, klientach oraz wystawionych mandatach.
-
-\subsection{Pomoc drogowa}
-
-Użytkownik systemu, eksmituje niepożądane pojazdy.
 
 \newpage
 \section{diagram przypadkow uzycia}
 \begin{figure}
 \vspace{-2cm}
-\includepdf[trim=0cm 0 0 -1cm]{usecase}
+\includepdf[trim=0cm 0 0 -1cm]{uzycia/usecase}
 \end{figure}
 %\begin{landscape}
 %\includegraphics[scale=0.65]{use-case}
@@ -101,25 +26,8 @@ Podstawowy ciąg zdarzeń: & 1. Klient wchodzi na stronę www \\
  & 6. Klient dokonuje płatności kartą \\ \hline
 Alternatywny ciąg zdarzeń:  & \# Klient rezygnuje z rezerwacji \\
  & \# Klient zmienia datę i ilość godzin w rezerwacji \\
- & \# Automatyczna kasa zwraca informację o braku miejsca w danym terminie\\
+ & \# Automatyczna kasa zwraca informację o braku miejsca w danym terminie\\ 
  \\ \hline
-\end{tabular}
-
-\vspace{1cm}
-
-\begin{tabular}{|L{3cm}  L{13cm}|}
-\hline
-Nazwa: & 1.2 Rezerwacja miejsca online - płatność sms \\ \hline
-Aktorzy: & Klient,  Automatyczna kasa \\ \hline
-Podstawowy ciąg zdarzeń: & 1. Klient wchodzi na stronę www \\
- & 2. Klient wybiera datę i ilość godzin rezerwacji \\
- & 3. Klient zgłasza chęć zrobienia rezerwacji \\
- & 4. Automatyczna kasa rejestruje rezerwację \\
- & 5. Automatyczna kasa wysyła potwierdzenie zrobienia rezerwacji \\
- & 6. Klient dokonuje płatności SMS \\ \hline
-Alternatywny ciąg zdarzeń:  & \# klient rezygnuje z rezerwacji \\
- & \# klient zmienia datę i ilość godzin w rezerwacji \\
- & \# Automatyczna kasa zwraca informację o braku miejsca w danym terminie\\ \hline
 \end{tabular}
 
 \vspace{1cm}
@@ -135,7 +43,7 @@ Podstawowy ciąg zdarzeń: & 1. Klient wchodzi na stronę www \\
  & 5. Automatyczna kasa wysyła potwierdzenie zrobienia rezerwacji \\
  & 6. Klient dokonuje płatności przelewem \\ \hline
 Alternatywny ciąg zdarzeń:  & \# klient rezygnuje z rezerwacji \\
- & \# klient zmienia datę i ilość godzin w rezerwacji \\
+ & \# klient zmienia datę i ilość godzin w rezerwacji \\ 
  & \# Automatyczna kasa zwraca informację o braku miejsca w danym terminie\\ \hline
 \end{tabular}
 
@@ -152,8 +60,8 @@ Podstawowy ciąg zdarzeń: & 1. Klient przyjeżdza na parking \\
  & 6. Klient dokonuje płatności kartą \\
  & 7. Automatyczna kasa generuje potwierdzenie zapłaty - paragon \\ \hline
 Alternatywny ciąg zdarzeń:  & \# klient rezygnuje z rezerwacji \\
- & \# klient zmienia ilość godzin w rezerwacji \\
- & \# Automatyczna kasa zwraca informację o aktualnym braku miejsca\\
+ & \# klient zmienia ilość godzin w rezerwacji \\ 
+ & \# Automatyczna kasa zwraca informację o aktualnym braku miejsca\\ 
  & \# Automatyczna kasa zwraca informację o braku środków na koncie \\ \hline
 \end{tabular}
 
@@ -170,7 +78,7 @@ Podstawowy ciąg zdarzeń: & 1. Klient przyjeżdza na parking \\
  & 6. Klient dokonuje płatności gotówką \\
  & 7. Automatyczna kasa generuje potwierdzenie zapłaty - paragon \\ \hline
 Alternatywny ciąg zdarzeń:  & \# klient rezygnuje z rezerwacji \\
- & \# klient zmienia ilość godzin w rezerwacji \\
+ & \# klient zmienia ilość godzin w rezerwacji \\ 
  & \# Automatyczna kasa zwraca informację o aktualnym braku miejsca\\ \hline
 \end{tabular}
 
@@ -289,7 +197,7 @@ Podstawowy ciąg zdarzeń: & 1. Klient wchodzi na stronę WWW \\
  & 4. Dział obsługi klienta wysyła zawiadomienie o rozpatrzeniu reklamacji \\
  \hline
 Alternatywny ciąg zdarzeń:  & \# klient rezygnuje ze składania reklamacji \\
- & \# Dział obsługi klienta powiadamia klienta o zwiększeniu czasu rozpatrywania reklamacji \\
+ & \# Dział obsługi klienta powiadamia klienta o zwiększeniu czasu rozpatrywania reklamacji \\ 
  \hline
 \end{tabular}
 
@@ -304,7 +212,7 @@ Podstawowy ciąg zdarzeń: & 1. Klient przychodzi do działu obsługi klienta \\
  & 3. Pracownik działu obsługi klienta rozpatruje reklamację na miejscu \\
  & 4. Pracownik działu obsługi klienta informuje klienta o rozpatrzeniu reklamacji \\
  \hline
-Alternatywny ciąg zdarzeń:  & \# Dział obsługi klienta powiadamia klienta o zwiększeniu czasu rozpatrywania reklamacji \\
+Alternatywny ciąg zdarzeń:  & \# Dział obsługi klienta powiadamia klienta o zwiększeniu czasu rozpatrywania reklamacji \\ 
  \hline
 \end{tabular}
 
@@ -320,7 +228,7 @@ Podstawowy ciąg zdarzeń: & 1. Klient przychodzi do działu obsługi klienta \\
  & 4. Pracownik działu obsługi klienta wystawia paragon opłacenia mandatu \\
  & 5. Pracownik działu obsługi klienta wydaje kartę wyjazdową klientowi \\
  \hline
-Alternatywny ciąg zdarzeń:  & \# Klient odmawia przyjęcia mandatu, składa reklamację \\
+Alternatywny ciąg zdarzeń:  & \# Klient odmawia przyjęcia mandatu, składa reklamację \\ 
  \hline
 \end{tabular}
 
@@ -336,31 +244,7 @@ Podstawowy ciąg zdarzeń: & 1. Klient przychodzi do działu obsługi klienta \\
  & 4. Pracownik działu obsługi klienta wystawia fakturę opłacenia mandatu \\
  & 5. Pracownik działu obsługi klienta wydaje kartę wyjazdową klientowi \\
  \hline
-Alternatywny ciąg zdarzeń:  & \# Klient odmawia przyjęcia mandatu, składa reklamację \\
+Alternatywny ciąg zdarzeń:  & \# Klient odmawia przyjęcia mandatu, składa reklamację \\ 
  \hline
 \end{tabular}
 \end{center}
-
-\newpage
-\section{Diagramy sekwencji}
-\begin{center}
-\newpage
-\includepdf[]{rezerwacja-seq}
-\newpage
-\includepdf[]{rezerwacja2-seq}
-\newpage
-\includepdf[]{parkowanie-seq}
-\newpage
-\includepdf[]{dostepnosc}
-\newpage
-\includepdf[]{odholowanie}
-\newpage
-\includepdf[]{raporty}
-\newpage
-\includepdf[]{faktury}
-\newpage
-\includepdf[]{reklamacje-seq}
-\newpage
-\includepdf[]{mandaty}
-\end{center}
-\end{document}
